# music-stream

./: .gitignore
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx
server/: Cargo.toml
server/config/: Cargo.toml
server/config/src/: lib.rs
server/database/: Cargo.toml
server/database/src/: lib.rs
server/driver/: Cargo.toml
server/driver/src/: main.rs
server/driver/src/api/: hello.rs  mod.rs  music.rs
server/driver/src/ws/: endpoint.rs  message_handler.rs  mod.rs  protocol.rs  streamer.rs
server/driver/src/ws/protocols/: enums.rs  erorr.rs  mod.rs  traits.rs
server/driver/src/ws/protocols/contexts/: mapper.rs  mod.rs  protocol_context.rs  stream.rs
