[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql"] }

config ={ path = "../config"}

[registries.crates-io]
protocol = "sparse"
