[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = { path = "../config" }
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }


[registries.crates-io]
protocol = "sparse"
